force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/Iron_Mountain_Storage_Profile__c.object-meta.xml
<CustomObject>
    <label>Iron Mountain Storage Profile</label>
    <nameField>
        <displayFormat>IMSP - {00000}</displayFormat>
        <label>Iron Mountain Storage Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Iron Mountain Storage Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>