force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Iron Mountain Storage Profiles</relationshipLabel>
    <relationshipName>Iron_Mountain_Storage_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>