force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/Competitor_Quantity_Cube__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Quantity_Cube__c</fullName>
    <inlineHelpText>The total number of CF of the customers storage volume with competitors.</inlineHelpText>
    <label>Competitor Storage Volume - Cubic Ft</label>
    <summarizedField>Storage_Profile__c.Quantity_Cube__c</summarizedField>
    <summaryForeignKey>Storage_Profile__c.Iron_Mountain_Storage_Profile__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>