force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/Competitor_Quantity_DB_R_Container__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Quantity_DB_R_Container__c</fullName>
    <label>Competitor Storage Volume - DPUs</label>
    <summarizedField>Storage_Profile__c.Quantity_DB_R_Container__c</summarizedField>
    <summaryForeignKey>Storage_Profile__c.Iron_Mountain_Storage_Profile__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>