force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/IM_Quantity_Cube__c.field-meta.xml
<CustomField>
    <fullName>IM_Quantity_Cube__c</fullName>
    <inlineHelpText>Total CF of customer storage volume with IM (total for all accounts in this IMGA).</inlineHelpText>
    <label>Existing IM Storage Volume - Cubic Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>