force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/IM_Quantity_DB_R_Container__c.field-meta.xml
<CustomField>
    <fullName>IM_Quantity_DB_R_Container__c</fullName>
    <inlineHelpText>Shows the quantity Iron Mountain has sold to this customer</inlineHelpText>
    <label>Existing IM Storage Volume - DPUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>