force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <formula>IF(
	AND(
		NOT(ISBLANK(Override_Existing_IM_Volume_Cubic_Ft__c)),
		NOT(ISBLANK(Override_Overall_Storage_Volume__c))
	),
	Override_Existing_IM_Volume_Cubic_Ft__c / Override_Overall_Storage_Volume__c,
	
IF(
	AND(
		ISBLANK(Override_Existing_IM_Volume_Cubic_Ft__c),
		NOT(ISBLANK(Override_Overall_Storage_Volume__c))
	),
	IM_Quantity_Cube__c / Override_Overall_Storage_Volume__c,
	
IF(
	AND(
		NOT(ISBLANK(Override_Existing_IM_Volume_Cubic_Ft__c)),
		ISBLANK(Override_Overall_Storage_Volume__c)
	),
	Override_Existing_IM_Volume_Cubic_Ft__c / Profiled_Quantity_Cube__c, NULL
)
)
)</formula>
    <inlineHelpText>The updated percentage of the customer&apos;s total RM storage business with IM (based on rep edits).</inlineHelpText>
    <label>Override - % Share - Cubic Ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>