force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/Override_Existing_IM_Volume_Cubic_Ft__c.field-meta.xml
<CustomField>
    <fullName>Override_Existing_IM_Volume_Cubic_Ft__c</fullName>
    <inlineHelpText>The updated total CF of customer storage volume with IM (total for all accounts in this IMGA) based on rep edits.</inlineHelpText>
    <label>Override - Existing IM Volume - Cubic Ft</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>