force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/Override_Overall_Customer_Vol_Tape__c.field-meta.xml
<CustomField>
    <fullName>Override_Overall_Customer_Vol_Tape__c</fullName>
    <inlineHelpText>The actual Customer’s Overall Storage Volume (updated by clicking edit). Update this field if the number provided by the system isn’t correct.</inlineHelpText>
    <label>Override-Overall Customer Vol. Tape</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>