force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/Profiled_Quantity_Cube__c.field-meta.xml
<CustomField>
    <fullName>Profiled_Quantity_Cube__c</fullName>
    <inlineHelpText>This is the total amount of records storage (in CF) the customer has/needs regardless of location (at customer site, competitors, etc.)</inlineHelpText>
    <label>Overall Customer Storage Volume-Cubic Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>