force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/Profiled_Quantity_Tape__c.field-meta.xml
<CustomField>
    <fullName>Profiled_Quantity_Tape__c</fullName>
    <inlineHelpText>Enter the profiled customer need.</inlineHelpText>
    <label>Overall Customer Storage Volume – Tape</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>