force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/Prospect_Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Sub_Segment__c</fullName>
    <label>Prospect Sub-Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Territory - Baltimore Washington</fullName>
            </value>
            <value>
                <fullName>Territory - Big South</fullName>
            </value>
            <value>
                <fullName>Territory - Canada Central</fullName>
            </value>
            <value>
                <fullName>Territory - Canada East</fullName>
            </value>
            <value>
                <fullName>Territory - Canada West</fullName>
            </value>
            <value>
                <fullName>Territory - Chicago</fullName>
            </value>
            <value>
                <fullName>Territory - Great Lakes</fullName>
            </value>
            <value>
                <fullName>Territory - Great Plains</fullName>
            </value>
            <value>
                <fullName>Territory - Mid South</fullName>
            </value>
            <value>
                <fullName>Territory - Mountain West</fullName>
            </value>
            <value>
                <fullName>Territory - New England</fullName>
            </value>
            <value>
                <fullName>Territory - Northern California</fullName>
            </value>
            <value>
                <fullName>Territory - NY Metro</fullName>
            </value>
            <value>
                <fullName>Territory - Pacific Northwest</fullName>
            </value>
            <value>
                <fullName>Territory - Pennsylvania</fullName>
            </value>
            <value>
                <fullName>Territory - Red River</fullName>
            </value>
            <value>
                <fullName>Territory - Southern California</fullName>
            </value>
            <value>
                <fullName>Territory - South Texas</fullName>
            </value>
            <value>
                <fullName>Territory - Sun Coast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>