force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/Share_Tape__c.field-meta.xml
<CustomField>
    <fullName>Share_Tape__c</fullName>
    <formula>IM_Quantity_Tape__c  /  Profiled_Quantity_Tape__c</formula>
    <label>% Share - Tape</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>