force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/Whitespace_Cube__c.field-meta.xml
<CustomField>
    <fullName>Whitespace_Cube__c</fullName>
    <formula>Profiled_Quantity_Cube__c -(IM_Quantity_Cube__c + Competitor_Quantity_Cube__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between the total amount of overall customer storage volume and what storage volume IM has (It’s calculated for you).</inlineHelpText>
    <label>Potential New Storage Volume - Cubic Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>