force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/Whitespace_DB_R_Container__c.field-meta.xml
<CustomField>
    <fullName>Whitespace_DB_R_Container__c</fullName>
    <formula>Profiled_Quantity_DB_R_Container__c -( IM_Quantity_DB_R_Container__c + Competitor_Quantity_DB_R_Container__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential New Storage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>