force-app/main/default/objects/Iron_Mountain_Storage_Profile__c/fields/Whitespace_Tape__c.field-meta.xml
<CustomField>
    <fullName>Whitespace_Tape__c</fullName>
    <formula>Profiled_Quantity_Tape__c -( IM_Quantity_Tape__c +  Competitor_Quantity_Tape__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential New Storage Volume - Tape</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>